fixed minor bug

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -31,7 +31,7 @@
             />
             <h1 class="contactsOverlayHeadline">Add contact</h1>
             <h2 class="contactsOverlaySubheadline">
-              Task are better with a team!
+              Tasks are better with a team!
             </h2>
           </div>
           <div class="whiteCloseOverlay">
