new media query sheet

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/contactsFullscreen.css" />
     <link rel="stylesheet" href="../css/contactsEdit.css">
     <link rel="stylesheet" href="../css/contacts_mediaqueries.css">
+    <link rel="stylesheet" href="../css/contacts_mediaq.css">
     <link rel="stylesheet" href="../fonts.css" />
   </head>
   <body onload="initializePage()">
