media query dot icon

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -275,11 +275,13 @@
       </div>
 
       <div class="headlinesContainer">
-        <a class="contactsArrow" href="../html/contacts.html"></a>
-        <div class="contactsHeadlineContainer">
+        <div class="smallResolution">
+         <div class="contactsHeadlineContainer">
           <h1 class="contactsHeadline">Contacts</h1>
           <h2 class="subheadingContacts">Better with a team</h2>
         </div>
+        <a class="contactsArrow" href="../html/contacts.html"></a>
+      </div>
 
         <div
           id="contactsFullscreen"
