greeting Name/ initials-Name Header

--- a/html/summary.html
+++ b/html/summary.html
@@ -67,8 +67,8 @@
             </div>
         </div>
         <div id="textRegards">
-            <p class="regardsTime">Good Morning,</p>
-            <p class="regardsName">Sophia Müller</p>
+            <p id="greetingSummary" class="regardsTime"></p>
+            <p id="nameSummary" class="regardsName"></p>
         </div>
     </div>
 </body>
