--- a/html/board.html
+++ b/html/board.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../style.css">
     <script src="../js/board.js"></script>
     <script src="../js/template.js"></script>
+    <script src="../js/summary.js"></script>
     <script src="../assets/templates/board_templates.js"></script>
 </head>
 <body onload="boardInit()">
