start mobil summary

--- a/html/summary.html
+++ b/html/summary.html
@@ -15,8 +15,11 @@
     <div w3-include-html="../../assets/templates/desktop_template.html"></div>
     <div id="titleSummary">
         <p class="summaryTitle">Join 360</p>
-        <div class="summaryTitleVektor"></div>
-        <p class="summaryTitleText">Key Matrix at a Glance</p>
+        <div class="vektorTextSummary">
+            <div class="summaryTitleVektor"></div>
+            <p class="summaryTitleText">Key Matrix at a Glance</p>
+        </div>
+        
     </div>
     <div class="summaryText">
         <div id="infosSummary">
