added new media query contacts

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../css/contactsEdit.css">
     <link rel="stylesheet" href="../css/contacts_mediaqueries.css">
     <link rel="stylesheet" href="../css/contacts_mediaq.css">
+    <link rel="stylesheet" href="../css/contacts_mediaquery_small.css">
     <link rel="stylesheet" href="../fonts.css" />
   </head>
   <body onload="initializePage()">
