edit function for subtask / firebase push

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -65,7 +65,7 @@
                 </form>
                 <label for="input-subtask">Subtasks</label>
                 <div class="input-container">
-                    <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
+                    <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button" id="add-button-subtask"
                         onclick="addSubTask()">+</button>
                     <div id="show-subtask"></div>
                 </div>
