--- a/html/board.html
+++ b/html/board.html
@@ -12,6 +12,11 @@
     <script src="../js/template.js"></script>
     <script src="../js/summary.js"></script>
     <script src="../assets/templates/board_templates.js"></script>
+    <link
+      rel="shortcut icon"
+      href="../assets/img/favicon.ico"
+      type="image/x-icon"
+    />
 </head>
 <body onload="boardInit()">
     <div w3-include-html="../../assets/templates/desktop_template.html"></div>
