--- a/html/summary.html
+++ b/html/summary.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/summary.css">
+    <link
+      rel="shortcut icon"
+      href="../assets/img/favicon.ico"
+      type="image/x-icon"
+    />
 </head>
 <body onload="summaryInit()">
     <div w3-include-html="../../assets/templates/desktop_template.html"></div>
