mobil version nav bar, guest part summary, summary mobil, bug fixing hoversidebar

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -309,5 +309,7 @@
     <script src="../js/contacts_mediaqueries.js"></script>
     <script src="../js/contacts_template.js"></script>
     <script src="../js/template.js"></script>
+    <script src="../js/summary.js"></script>
+    <script src="../assets/templates/board_templates.js"></script>
   </body>
 </html>
