--- a/html/summary.html
+++ b/html/summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Summary</title>
     <script src="../js/template.js"></script>
     <script src="../js/summary.js"></script>
     <link rel="stylesheet" href="../assets/templates/templates.css">
