--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <script src="./js/summary.js"></script>
+    <script src="../js/template.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts.css" />
     <link rel="stylesheet" href="./css/index_mediaqueries.css">
@@ -87,7 +88,7 @@
                 <button type="submit" class="mainpageLoginButton">
                   Log in
                 </button>
-                <button class="mainpageGuestButton" onclick="redirectToBoard()">
+                <button class="mainpageGuestButton" onclick="redirectToSummary()">
                   Guest Log in
                 </button>
               </div>
