--- a/html/add_task.html
+++ b/html/add_task.html
@@ -13,10 +13,12 @@
     <script src="../js/template.js"></script>
     <script src="../js/add_task.js"></script>
     <script src="../js/add_task_template.js"></script>
+    <!-- <script src="../js/summary.js"></script> -->
+    <script src="../assets/templates/board_templates.js"></script>
     <!-- <script src="../js/board.js"></script> -->
 </head>
 
-<body onload="includeHTML(); init()">
+<body onload="init()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
     <div class="container  m-left-328">
         <div class="head">
