--- a/html/summary.html
+++ b/html/summary.html
@@ -6,7 +6,7 @@
     <title>Summary</title>
     <script src="../js/template.js"></script>
     <script src="../js/summary.js"></script>
-    <link rel="stylesheet" href="../assets/templates/templates.css">
+    <link rel="stylesheet" href="../../assets/templates/templates.css">
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/summary.css">
@@ -17,7 +17,7 @@
     />
 </head>
 <body onload="summaryInit()">
-    <div w3-include-html="../../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../assets/templates/desktop_template.html"></div>
     <div id="titleSummary">
         <p class="summaryTitle">Join 360</p>
         <div class="vektorTextSummary">
