--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <script src="./js/summary.js"></script>
-    <script src="../js/template.js"></script>
+    <script src="./js/template.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts.css" />
     <link rel="stylesheet" href="./css/index_mediaqueries.css">
