responsive privacy/legal/help

--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
+    <script src="../js/template.js"></script>
 </head>
 
 <body onload="includeHTML()">
     <div w3-include-html="../assets/templates/desktop_template.html"></div>
 
-    <a class="arrow-backwards-link" href="../index.html">
-        <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
-    </a>
     <div class="container m-left-328">
         <div class="head">
             <h1>Privacy Policy</h1>
