--- a/html/add_task.html
+++ b/html/add_task.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Add_Task</title>
+    <link rel="shortcut icon" href="../assets/img/logoLarge.png" type="image/x-icon">
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <link rel="stylesheet" href="../css/add_task.css">
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="../css/add_task_mediaqueries.css">
     <script src="../js/template.js"></script>
     <script src="../js/add_task.js"></script>
-    <script src="../js/add_task_template.js"></script>
+    <script src="../assets/templates/add_task_template.js"></script>
     <!-- <script src="../js/summary.js"></script> -->
     <script src="../assets/templates/board_templates.js"></script>
     <!-- <script src="../js/board.js"></script> -->
