--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
-    <script src="../js/template.js"></script>
+    <script src="../assets/templates/template.js"></script>
 </head>
 
 <body onload="includeHTML()">
-    <div w3-include-html="../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../assets/templates/template.html"></div>
 
     <div class="container m-left-328">
         <div class="head">
