--- a/html/contacts.html
+++ b/html/contacts.html
@@ -11,15 +11,15 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="../css/contacts.css" />
-    <link rel="stylesheet" href="../css/contactsFullscreen.css" />
-    <link rel="stylesheet" href="../css/contactsEdit.css">
-    <link rel="stylesheet" href="../css/contacts_mediaqueries.css">
-    <link rel="stylesheet" href="../css/contacts_mediaq.css">
-    <link rel="stylesheet" href="../css/contacts_mediaquery_small.css">
+    <link rel="stylesheet" href="../assets/templates/css/contactsFullscreen.css" />
+    <link rel="stylesheet" href="../assets/templates/css/contactsEdit.css">
+    <link rel="stylesheet" href="../assets/templates/css/contacts_mediaqueries.css">
+    <link rel="stylesheet" href="../assets/templates/css/contacts_mediaq.css">
+    <link rel="stylesheet" href="../assets/templates/css/contacts_mediaquery_small.css">
     <link rel="stylesheet" href="../fonts.css" />
   </head>
   <body onload="initializePage()">
-    <div w3-include-html="../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../assets/templates/template.html"></div>
 
     <div class="mainContainerContacts">
       <!-- Overlay Add Contact Start -->
@@ -306,10 +306,10 @@
     </div>
 
     <script src="../js/contacts.js"></script>
-    <script src="../js/contacts_mediaqueries.js"></script>
-    <script src="../js/contacts_template.js"></script>
-    <script src="../js/template.js"></script>
+    <script src="../assets/templates/js/contacts_mediaqueries.js"></script>
+    <script src="../assets/templates/js/contacts_template.js"></script>
+    <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
-    <script src="../assets/templates/board_templates.js"></script>
+    <script src="../assets/templates/js/board_templates.js"></script>
   </body>
 </html>
