--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="../fonts.css">
     <!-- <script src="../script.js"></script> -->
     <link rel="stylesheet" href="../assets/templates/templates.css">
-    <script src="../js/template.js"></script>
+    <script src="../assets/templates/template.js"></script>
     <!-- <link rel="stylesheet" href="../../assets/templates/desktop_template.html"> -->
 
 </head>
 
 <body onload="includeHTML()">
-    <div w3-include-html="../../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../../assets/templates/template.html"></div>
     <div class="container m-left-328">
         <div class="head">
             <h1>Legal Notice</h1>
