--- a/html/summary.html
+++ b/html/summary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summary</title>
-    <script src="../js/template.js"></script>
+    <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
     <link rel="stylesheet" href="../../assets/templates/templates.css">
     <link rel="stylesheet" href="../fonts.css">
@@ -17,7 +17,7 @@
     />
 </head>
 <body onload="summaryInit()">
-    <div w3-include-html="../assets/templates/desktop_template.html"></div>
+    <div w3-include-html="../assets/templates/template.html"></div>
     <div id="titleSummary">
         <p class="summaryTitle">Join 360</p>
         <div class="vektorTextSummary">
