--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./js/template.js"></script>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./fonts.css" />
-    <link rel="stylesheet" href="./css/index_mediaqueries.css">
+    <link rel="stylesheet" href="./assets/templates/css/index_mediaqueries.css">
     <link
       rel="shortcut icon"
       href="./assets/img/favicon.ico"
