--- a/html/add_task.html
+++ b/html/add_task.html
@@ -11,12 +11,11 @@
     <link rel="stylesheet" href="../css/add_task.css">
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/css/add_task_mediaqueries.css">
-    <script src="../assets/templates/template.js"></script>
     <script src="../js/add_task.js"></script>
     <script src="../assets/templates/js/add_task_template.js"></script>
-    <!-- <script src="../js/summary.js"></script> -->
+    <script src="../assets/templates/template.js"></script>
+    <script src="../js/summary.js"></script>
     <script src="../assets/templates/js/board_templates.js"></script>
-    <!-- <script src="../js/board.js"></script> -->
 </head>
 
 <body onload="init()">
