bug fix import to server

--- a/html/summary.html
+++ b/html/summary.html
@@ -6,7 +6,7 @@
     <title>Summary</title>
     <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
-    <link rel="stylesheet" href="../../assets/templates/templates.css">
+    <link rel="stylesheet" href="../assets/templates/templates.css">
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/summary.css">
