--- a/html/board.html
+++ b/html/board.html
@@ -19,7 +19,7 @@
     />
 </head>
 <body onload="boardInit()">
-    <div w3-include-html="../../assets/templates/template.html"></div>
+    <div w3-include-html="../assets/templates/template.html"></div>
     <section class="headerFrame">
         <div class="titleSearch">
             <div class="titleBoard">Board</div>
