--- a/html/help.html
+++ b/html/help.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
+    <script src="../js/summary.js"></script>
     <script src="../assets/templates/template.js"></script>
 </head>
 
-<body onload="includeHTML()">
+<body onload="initHTML()">
     <div w3-include-html="../../assets/templates/template.html"></div>
     <div class="container m-left-328">
         <div class="head">
