--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -10,11 +10,12 @@
     <!-- <script src="../script.js"></script> -->
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../assets/templates/template.js"></script>
+    <script src="../js/summary.js"></script>
     <!-- <link rel="stylesheet" href="../../assets/templates/desktop_template.html"> -->
 
 </head>
 
-<body onload="includeHTML()">
+<body onload="initHTML();">
     <div w3-include-html="../../assets/templates/template.html"></div>
     <div class="container m-left-328">
         <div class="head">
