--- a/html/greetingMobil.html
+++ b/html/greetingMobil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Summary</title>
-    <script src="../js/template.js"></script>
+    <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <link rel="stylesheet" href="../fonts.css">
