--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <script src="../script.js"></script>
     <script src="../assets/templates/template.js"></script>
+    <script src="../js/summary.js"></script>
 </head>
 
-<body onload="includeHTML()">
+<body onload="initHTML();">
     <div w3-include-html="../assets/templates/template.html"></div>
 
     <div class="container m-left-328">
