--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -11,6 +11,11 @@
     <script src="../script.js"></script>
     <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
+    <link
+      rel="shortcut icon"
+      href="../assets/img/favicon.ico"
+      type="image/x-icon"
+    />
 </head>
 
 <body onload="initHTML();">
