--- a/html/legal_notice.html
+++ b/html/legal_notice.html
@@ -12,7 +12,11 @@
     <script src="../assets/templates/template.js"></script>
     <script src="../js/summary.js"></script>
     <!-- <link rel="stylesheet" href="../../assets/templates/desktop_template.html"> -->
-
+    <link
+      rel="shortcut icon"
+      href="../assets/img/favicon.ico"
+      type="image/x-icon"
+    />
 </head>
 
 <body onload="initHTML();">
