linking to board from help/privacy/legal

--- a/html/privacy_policy.html
+++ b/html/privacy_policy.html
@@ -24,7 +24,7 @@
     <div class="container m-left-328">
         <div class="head">
             <h1>Privacy Policy</h1>
-            <a class="arrow-backwards-link" href="index.html">
+            <a class="arrow-backwards-link" href="../html/board.html">
                 <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
             </a>
         </div>
