--- a/html/help.html
+++ b/html/help.html
@@ -23,7 +23,7 @@
     <div class="container m-left-328">
         <div class="head">
             <h1>Help</h1>
-            <a class="arrow-backwards-link" href="index.html">
+            <a class="arrow-backwards-link" href="../html/board.html">
                 <img class="arrow-backwards" src="../assets/img/arrow-left-line.svg" alt="arrow_left">
             </a>
         </div>
