--- a/html/contacts.html
+++ b/html/contacts.html
@@ -261,7 +261,9 @@
     </div>
 
     <!-- Overlay Edit End -->
-
+      <button class="addContactIcon" onclick="openOverlay()">
+        <img src="../assets/img/contact_add.svg" alt="Person" />
+      </button>
       <div class="contactsSidebar">
         <div class="buttonContainer">
           <button class="addContactButton" onclick="openOverlay()">
@@ -269,9 +271,9 @@
             <img src="../assets/img/contact_add.svg" alt="Person" />
           </button>
         </div>
-        <button class="addContactIcon" onclick="openOverlay()">
+        <!-- <button class="addContactIcon" onclick="openOverlay()">
           <img src="../assets/img/contact_add.svg" alt="Person" />
-        </button>
+        </button> -->
         <div class="contactList" id="contactList"></div>
       </div>
 
