--- a/html/add_task.html
+++ b/html/add_task.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/templates.css">
     <link rel="stylesheet" href="../css/add_task.css">
-    <link rel="stylesheet" href="../fonts.css">
     <link rel="stylesheet" href="../assets/templates/css/add_task_mediaqueries.css">
     <script src="../js/add_task.js"></script>
     <script src="../assets/templates/js/add_task_template.js"></script>
@@ -26,7 +25,7 @@
         </div>
         <section id="content">
             <div class="content-left">
-                <form onsubmit="addTask(); return false">
+                <form class="flex8gap" onsubmit="addTask(); return false">
                     <label for="input-title">Title<span class="span-star">*</span></label>
                     <input type="text" id="input-title" placeholder="Enter a Title" required>
                 </form>
@@ -46,18 +45,20 @@
 
             <div class="seperator" id="seperator-content"></div>
 
-            <div class="content-right">
-                <form onsubmit="addTask(); return false">
+            <div class="content-right flex24gap">
+                <form class="flex8gap" onsubmit="addTask(); return false">
                     <label for="input-date">Due Date<span class="span-star">*</span></label>
                     <input id="input-date" type="date" required>
                 </form>
-                <label for="input-prio">Prio</label>
-                <div class="input-prio-span">
-                    <div id="input-prio1" onclick="changePrioButtonUrgent()" class="urgent-image btn"></div>
-                    <div id="input-prio2" onclick="changePrioButtonMedium()" class="medium-image btn"></div>
-                    <div id="input-prio3" onclick="changePrioButtonLow()" class="low-image btn"></div>
+                <div class="flex8gap">
+                    <label for="input-prio">Prio</label>
+                    <div class="input-prio-span">
+                        <div id="input-prio1" onclick="changePrioButtonUrgent()" class="urgent-image btn"></div>
+                        <div id="input-prio2" onclick="changePrioButtonMedium()" class="medium-image btn"></div>
+                        <div id="input-prio3" onclick="changePrioButtonLow()" class="low-image btn"></div>
+                    </div>
                 </div>
-                <form onsubmit="addTask(); return false">
+                <form class="flex8gap" onsubmit="addTask(); return false">
                     <label for="input-category">Category<span class="span-star">*</span></label>
                     <div class="input-categorie-container">
                         <input id="input-category" required>
@@ -66,21 +67,24 @@
                     </div>
                     <div id="display-categorie" class="d-none"></div>
                 </form>
-                <label for="input-subtask">Subtasks</label>
-                <div class="input-container">
-                    <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
-                        id="add-button-subtask" onclick="addSubTask()">+</button>
+                <div class="flex8gap">
+                    <label for="input-subtask">Subtasks</label>
+                    <div class="input-container">
+                        <input type="text" id="input-subtask" placeholder="Add new subtask"><button class="add-button"
+                            id="add-button-subtask" onclick="addSubTask()">+</button>
+                        </div>
+                        <div id="show-subtask">
                     </div>
-                    <div id="show-subtask">
-                </div>
+                    </div>
             </div>
         </section>
         <div class="footer">
             <span>*This field is required</span>
             <div class="button-footer">
                 <button class="btn-footer-clear btn" onclick="clearInputs()" id="btn-clear">Clear x</button>
-                <button class="btn-footer-create btn" onclick="addTask()">Create Task <img
-                        src="../assets/img/check.svg"></button>
+                <button class="btn-footer-create btn" onclick="addTask()">Create Task 
+                    <img src="../assets/img/check.svg" alt="">
+                </button>
             </div>
         </div>
     </div>
